src/objects/Doctors_Approval_Request__c.object
<CustomObject>
    <description>Join table (Junction object) between Creative and User in order to accommodate approval of public ads by multiple doctors.</description>
    <fields>
        <fullName>Approval_Iteration__c</fullName>
        <label>Request</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>2047</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Doctor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Doctor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Clinical Doctor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Doctor_s_Approval_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link_to_media__c</fullName>
        <formula>Public_Ad__r.Link_to_media__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to media</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Ad_Name__c</fullName>
        <formula>Public_Ad__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Advertisement Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Ad__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Advertisement</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Creative__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Public Ad</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Creative__c</referenceTo>
        <relationshipLabel>Doctor&apos;s Approval Requests</relationshipLabel>
        <relationshipName>Doctors_Approval_Requests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approve</fullName>
                </value>
                <value>
                    <fullName>Reject</fullName>
                </value>
                <value>
                    <fullName>Abstain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Doctor&apos;s Approval Request</label>
    <nameField>
        <displayFormat>DAR-{0}</displayFormat>
        <label>Identifier</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Doctor&apos;s Approval Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>